--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,15 +1,7 @@
-<div id="carousel-home" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img width="100%" src="img/slide.jpg" alt="...">
+<div class="carousel slide" id="carousel-home">
+    <uib-carousel interval="5000" template-url="/templates/partials/carousel.html">
+        <uib-slide ng-repeat="slide in Home.mainSlider">
+            <img width="100%" ng-src="{{ slide.urlImages.large }}" alt="{{ slide.title }}">
 
             <div class="carousel-caption">
                 <div class="col-md-12">
@@ -46,19 +38,10 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-home" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-home" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+        </uib-slide>
+    </uib-carousel>
 </div>
+
 <section id="contact-section" class="section_padding">
     <div class="container">
         <div class="col-md-8 col-sm-8">
