connect contact form home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,34 +6,39 @@
             <div class="carousel-caption">
                 <div class="col-md-12">
                     <div class="col-md-7 text"></div>
-                    <div class="col-md-5">
-                        <form class="box-mail">
+                    <div class="col-md-5" ng-controller="ContactCtrl as Contact">
+                        <form ng-submit="Contact.createNotification('CONTACT_FORM')">
                             <h4>Contáctanos y pregunta por nuestros planes</h4>
 
                             <div class="form-group">
-                                <input type="name" class="form-control" id="exampleInputEmail1" placeholder="Nombre">
+                                <input type="name" class="form-control" name="name" placeholder="Nombre *" required
+                                        ng-model="Contact.notification.name">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                                <input type="email" class="form-control" name="email" placeholder="Correo electrónico *"
+                                        required ng-model="Contact.notification.email">
                             </div>
                             <div class="form-group">
-                                <input type="number" class="form-control" id="phone"
-                                       placeholder="Teléfono">
+                                <input type="number" class="form-control" id="phone" placeholder="Teléfono *"
+                                        required ng-model="Contact.notification.phone">
                             </div>
                             <div class="form-group">
-                                <select class="form-control">
-                                    <option>Fraccionamiento de interés</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
+                                <select class="form-control" required name="fraccionamiento"
+                                        ng-model="Contact.notification.fraccionamiento">
+                                    <option selected="selected" value="">Fraccionamiento de interés *</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
                                 </select>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" name="text" id="" cols="100%" rows="6"
-                                          placeholder="Comentarios"></textarea>
+                                <textarea class="form-control" name="comments" cols="100%" rows="6" placeholder="Comentarios *"
+                                          required ng-model="Contact.notification.message"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-orange">Enviar</button>
+                            <button type="submit" class="btn btn-orange" ng-disabled="Contact.busy">
+                                Enviar <span ng-if="Contact.busy"><i class="fa fa-spinner fa-spin"></i></span>
+                            </button>
                         </form>
                     </div>
                 </div>
