--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -5,8 +5,8 @@
         <a href="mailto:contacto@viveenarmonia.com.mx"><i class="fa fa-envelope"></i> contacto@viveenarmonia.com.mx</a>
     </div>
     <div class="text-center contact-footer">
-        <a href="#"> Aviso de privacidad</a> |
-        <a href="#"> Términos y condiciones</a>
+        <a ui-sref="page({slug: 'aviso-de-privacidad1464721005'})"> Aviso de privacidad</a> |
+        <a ui-sref="page({slug: 'terminos-y-condiciones1464721081'})"> Términos y condiciones</a>
     </div>
     <p class="text-center text">
         2016. Vida en Armonía ®. Todos los derechos reservados
