--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -9,7 +9,7 @@
             <div class="col-md-12 content-pages">
                 <div class="container">
                     <div class="col-md-4 col-sm-4 no-padding" ng-repeat="entry in Post.list">
-                        <a ui-sref="product_detail({slug: entry.slug})">
+                        <a ui-sref="project_detail({slug: entry.slug})">
                             <div class="box-default">
                                 <div class="box-header">
                                     <img class="img-responsive" post-image="{{ entry.urlImages.medium }}"
