--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,8 @@
                 <div class="col-md-12">
                     <div class="col-md-7 text"></div>
                     <div class="col-md-5" ng-controller="ContactCtrl as Contact">
-                        <form ng-submit="Contact.createNotification('CONTACT_FORM')">
+                        <form ng-submit="Contact.createNotification('CONTACT_FORM')"
+                                ng-init="Contact.notification.subject = 'Formulario de contacto Inicio'">
                             <h4>Contáctanos y pregunta por nuestros planes</h4>
 
                             <div class="form-group">
@@ -54,7 +55,7 @@
                 los mejores planes para ti; comienza a construir tu futuro.</h3>
         </div>
         <div class="col-md-4 col-sm-4">
-            <a href="#" class="btn btn-white-clear"> Ver planes</a>
+            <a ui-sref="payment_plans" class="btn btn-white-clear"> Ver planes</a>
         </div>
     </div>
 </section>
@@ -63,65 +64,25 @@
 <section id="recent-works" class="section_padding">
     <div class="container">
         <div class="title text-center">
-            <h1> Fraccionamientos </h1>
+            <h1> Proyectos recientes </h1>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
+        <div class="col-xs-12 col-sm-4 col-md-4" ng-repeat="project in Home.recentProjects">
             <div class="recent-work-wrap back-image">
-                <img class="img-responsive"
-                     src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
-                     alt="Restaurantes">
+                <img class="img-responsive" post-image="{{ project.urlImages.thumbnails }}"
+                     alt="{{ project.title }}">
 
                 <div class="titles">
-                    <h3>Jardín real Mazamitla</h3>
+                    <h3>{{ project.title }}</h3>
 
-                    <p>Fraccionamiento Ubicado en Av. del Sol Col. el solecito, Sahuayo, Michoacán, Méx.</p>
+                    <p>{{ project.excerpt }}</p>
                 </div>
 
                 <div class="overlay">
                     <div class="recent-work-inner top">
-                        <h3>Jardín real Mazamitla</h3>
+                        <h3>{{ project.title }}</h3>
 
-                        <a href="#" class="btn-white-clear">+ Información</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <div class="recent-work-wrap back-image">
-                <img class="img-responsive"
-                     src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
-                     alt="Restaurantes">
-
-                <div class="titles">
-                    <h3>Jardín real Mazamitla</h3>
-
-                    <p>Fraccionamiento Ubicado en Av. del Sol Col. el solecito, Sahuayo, Michoacán, Méx.</p>
-                </div>
-
-                <div class="overlay">
-                    <div class="recent-work-inner top">
-                        <h3>Jardín real Mazamitla</h3>
-
-                        <a href="#" class="btn-white-clear">+ Información</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <div class="recent-work-wrap back-image">
-                <img class="img-responsive"
-                     src="https://kendall-publielite.s3.amazonaws.com/media/categories/ico_restaurante.png"
-                     alt="Restaurantes">
-
-                <div class="titles">
-                    <h3>Jardín real Mazamitla</h3>
-
-                    <p>Fraccionamiento Ubicado en Av. del Sol Col. el solecito, Sahuayo, Michoacán, Méx.</p>
-                </div>
-
-                <div class="overlay">
-                    <div class="recent-work-inner top">
-                        <h3>Jardín real Mazamitla</h3>
-
-                        <a href="#" class="btn-white-clear">+ Información</a></div>
+                        <a ui-sref="project_detail({slug: project.slug})" post-link="{ link: {url: project.link, target: '_self'} }"
+                           class="btn-white-clear">+ Información</a></div>
                 </div>
             </div>
         </div>
@@ -133,20 +94,12 @@
         <div class="parallax__layer parallax__layer--base">
             <div id="contact" class="container section_padding">
                 <div class="text-center title">
-                    <h2>¿Por qué elegirnos ?</h2>
+                    <h2>{{ Home.whyChooseUs[0].title }}</h2>
 
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <div class="row">
-                        <div class="contact text-center">
-                            <p>Adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt
-
-                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                dolor in reprehenderit in voluptate velit esse cillum. </p>
+                        <div class="contact text-center" ng-bind-html="Home.whyChooseUs[0].content">
                         </div>
                         <div class="contact social-media">
                             <a href="tel:3531281375"><i class="fa fa-phone"></i>
