--- a/app/templates/project_detail.html
+++ b/app/templates/project_detail.html
@@ -1,5 +1,5 @@
 <section id="product-detail">
-    <div class="col-md-12 title-detail" style="background-image: url('../img/example.png');">
+    <div class="col-md-12 title-detail" style="background-image: url('{{ Item.detail.urlImages.large }}');">
         <div class="content-title">
             <h2 class="title">{{ Item.detail.title }}</h2>
         </div>
