hide search form

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -12,7 +12,7 @@
                     <div class="col-md-4" ng-repeat="entry in Search.listSearch">
                         <div class="box-default">
                             <div class="box-header">
-                                <a ui-sref="product_detail({slug: entry.slug})"><img
+                                <a ui-sref="project_detail({slug: entry.slug})"><img
                                         post-image="{{ entry.urlImages.medium }}" alt="{{ entry.title }}"/></a>
                             </div>
                             <div class="box-container">
