update analitycs code, update slider form fixed, get fraccionamientoss in homee form

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -44,9 +44,8 @@
                                    placeholder="Teléfono" required ng-model="Contact.notification.phone">
                         </div>
                         <div class="form-group">
-                            <label class="text-form" for="message">Escribenos cuales son tus necesidades *</label>
                                 <textarea class="form-control" id="message" name="message" rows="7"
-                                          placeholder="Escribe tu mensaje aquí" required
+                                          placeholder="Comentarios *" required
                                           ng-model="Contact.notification.message"></textarea>
                         </div>
                         <div class="pull-right">
