--- a/app/css/main.css
+++ b/app/css/main.css
@@ -159,6 +159,13 @@ header .logo {
   width: auto;
   margin-top: 10px;
 }
+.slider-img {
+  background-position: center center;
+  background-size: cover;
+  height: 650px;
+  background-repeat: no-repeat;
+  margin-top: 100px;
+}
 .carousel-caption {
   top: 20%;
   width: 80%;
@@ -170,6 +177,7 @@ header .logo {
 .carousel-caption .box-mail {
   background: rgba(255,255,255,0.8);
   border-radius: 3px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.22);
   padding: 15px;
 }
 .carousel-caption .box-mail h4 {
@@ -296,9 +304,13 @@ header .logo {
 .recent-work-wrap {
   position: relative;
   margin: 30px;
+  height: 250px;
+  background-size: cover;
+  background-position: center center;
 }
 .recent-work-wrap img {
   width: 100%;
+  height: 250px;
 }
 .recent-work-wrap .recent-work-inner {
   top: 0;
@@ -349,7 +361,7 @@ header .logo {
 #contact-section {
   background-image: url("../img/banner-bottom.jpg");
   background-repeat: no-repeat;
-  background-position: cover;
+  background-size: cover;
   text-align: center;
 }
 #contact-section h3 {
@@ -409,8 +421,10 @@ color
 .box-default .comment-area .date {
   color: #5d5d5d;
 }
-.box-default .box-header img {
-  width: 100%;
+.box-default .box-header {
+  height: 250px;
+  background-size: cover;
+  background-position: center center;
 }
 .box-default .box-container {
   text-align: left;
@@ -821,6 +835,14 @@ color
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu {
+    background: #389c80;
+    box-shadow: none;
+    border-radius: 0;
+  }
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
+    color: #fff;
+  }
   .navbar-logo {
     display: none;
   }
@@ -848,7 +870,7 @@ color
   }
   .navbar-default .navbar-toggle:hover,
   .navbar-default .navbar-toggle:focus {
-    background: #ffa500;
+    background: transparent;
   }
   .navbar-default .navbar-toggle {
     border-color: transparent;
@@ -874,14 +896,11 @@ color
   .carousel-inner > .item > img {
     height: 600px;
   }
-  .carousel-inner {
-    margin-top: 100px;
-  }
-  .carousel-caption .box-mail {
-    margin: -130px 20px 0;
-  }
   .recent-work-wrap {
     margin: 5px;
+  }
+  .carousel-caption {
+    top: 15%;
   }
   .recent-work-wrap > .titles {
     padding: 35px 20px 10px;
@@ -902,6 +921,18 @@ color
   }
 }
 @media only screen and (max-width: 767px) {
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
+    color: #fff;
+  }
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu {
+    background: #389c80;
+    box-shadow: none;
+    border-radius: 0;
+  }
+  .navbar-default .navbar-toggle:hover,
+  .navbar-default .navbar-toggle:focus {
+    background: transparent;
+  }
   .parallax .contact {
     padding: 20px;
   }
@@ -918,11 +949,11 @@ color
     padding: 0;
     margin: 60px 0px 25px;
   }
+  .carousel-caption {
+    top: 13%;
+  }
   .navbar-default .navbar-toggle {
     border-color: transparent;
-  }
-  .carousel-caption .box-mail {
-    display: none;
   }
   #contact-section {
     background-size: cover;
@@ -963,9 +994,6 @@ color
   header .logo {
     margin-top: 15px;
     width: 280px;
-  }
-  .navbar-fixed-top {
-    position: relative;
   }
   h2.title-outstanding {
     font-size: 16px !important;
