--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -65,6 +65,15 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu
+    background #389c80
+    box-shadow none
+    border-radius 0
+
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
+    color white
+
   .navbar-logo
     display none
     .logo-img
@@ -90,7 +99,7 @@
     border-color transparent
 
   .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
-    background orange
+    background transparent
 
   .navbar-default .navbar-toggle
     border-color transparent
@@ -116,14 +125,11 @@
   .carousel-inner > .item > img
     height 600px
 
-  .carousel-inner
-    margin-top 100px
-
-  .carousel-caption .box-mail
-    margin -130px 20px 0
-
   .recent-work-wrap
     margin 5px
+
+  .carousel-caption
+    top 15%
 
   .recent-work-wrap > .titles
     padding 35px 20px 10px
@@ -146,6 +152,17 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
+    color white
+
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu
+    background #389c80
+    box-shadow none
+    border-radius 0
+
+  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
+    background transparent
   .parallax .contact
     padding 20px
 
@@ -159,11 +176,10 @@
     background transparent
     padding 0
     margin 60px 0px 25px
-
+  .carousel-caption
+    top 13%
   .navbar-default .navbar-toggle
     border-color transparent
-  .carousel-caption .box-mail
-    display none
   #contact-section
     background-size cover
     padding 30px 0
@@ -192,8 +208,6 @@
   header .logo
     margin-top 15px
     width 280px
-  .navbar-fixed-top
-    position relative
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
