ajuste de estilo

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -44,7 +44,7 @@ h4,
 h5,
 h6
   margin 0 0 15px
-  font-weight 700
+  font-weight 500
   font-family 'Poppins', sans-serif
 
 .section_padding
@@ -52,11 +52,11 @@ h6
 
 p
   font-family 'Poppins', sans-serif
-  font-weight 400
+  font-weight 300
   font-size 14px
 
 body
-  font-family 'Poppins', sans-serif
+  font-family 'Poppins', sans-serif !important
 
 .white
   color white !important
@@ -113,7 +113,7 @@ header
     margin-bottom 0
     z-index 9999
     .navbar-brand
-      padding 5px 15px
+      padding 5px 15px 
     .navbar-nav > li > a
       color #5d5d5d
       padding 40px 18px
