--- a/app/css/main.css
+++ b/app/css/main.css
@@ -42,7 +42,7 @@ h4,
 h5,
 h6 {
   margin: 0 0 15px;
-  font-weight: 700;
+  font-weight: 500;
   font-family: 'Poppins', sans-serif;
 }
 .section_padding {
@@ -50,11 +50,11 @@ h6 {
 }
 p {
   font-family: 'Poppins', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 14px;
 }
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
 }
 .white {
   color: #fff !important;
