ajuste de esrilo

--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -121,6 +121,8 @@
   .navbar-nav
     background white
     margin-top 30px
+    box-shadow 0 4px 5px rgba(0,0,0,0.3)
+    border-top 1px solid #f5f5f5
 
   .carousel-inner > .item > img
     height 600px
@@ -171,11 +173,11 @@
     .title-detail .content-title .title
       padding-left 0
       text-align center
-      margin-top 50px
+      margin-top 25%
   .form-section
     background transparent
     padding 0
-    margin 60px 0px 25px
+    margin 160px 0px 25px
   .carousel-caption
     top 13%
   .navbar-default .navbar-toggle
@@ -201,13 +203,15 @@
   .navbar-default .navbar-collapse, .navbar-default .navbar-form
     border none
   .navbar-nav
-    background white
-    margin-top 30px
+    background #fff
+    margin-top 20px
+    box-shadow 0 4px 5px rgba(0,0,0,0.3)
+    border-top 1px solid #f5f5f5
   header .navbar-default
     background white
   header .logo
     margin-top 15px
-    width 280px
+    width 230px
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
@@ -218,12 +222,13 @@
 
   header .navbar-default .navbar-nav > li > a
     color #555
-    padding 10px 15px
-
+    padding 15px 15px
+  .social-media .social a
+    word-wrap break-word
   #content-area
-    margin 30px 0px 60px
+    margin 150px 0px 60px
   .content-blog
-    margin 25px 0px 60px !important
+    margin 130px 0px 60px !important
   #slider-area
     padding-bottom 300px
 
