--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -157,9 +157,11 @@ header
   background-repeat no-repeat
   margin-top 100px
 .carousel-caption
-  top 20%
-  width 80%
-  left 10%
+  top 42%
+  width 60%
+  h3
+    text-shadow 0 0 10px #000
+    font-size 26px
   .text
     margin-top 40px
   .box-mail
