--- a/app/css/main.css
+++ b/app/css/main.css
@@ -167,9 +167,12 @@ header .logo {
   margin-top: 100px;
 }
 .carousel-caption {
-  top: 20%;
-  width: 80%;
-  left: 10%;
+  top: 42%;
+  width: 60%;
+}
+.carousel-caption h3 {
+  text-shadow: 0 0 10px #000;
+  font-size: 26px;
 }
 .carousel-caption .text {
   margin-top: 40px;
