--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -14,9 +14,7 @@
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
                                 <div class="box-default">
-                                    <div class="box-header">
-                                        <img class="img-responsive" post-image="{{ entry.urlImages.thumbnails }}"
-                                             alt="{{ entry.title }}">
+                                    <div class="box-header" style="background-image: url('{{ entry.urlImages.thumbnails }}')">
                                     </div>
 
                                     <div class="box-container">
