cambios en el home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,7 +22,7 @@
     </div>
 </section>
 
-<!-- recent works fraccionamientos -->
+<!-- fraccionamientos -->
 <section id="recent-works" class="section_padding">
     <div class="container">
         <div class="title text-center">
